--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <title>12DTEC Website</title>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
+
     <script src="/script.js" defer></script>
   </head>
   <body>
@@ -34,29 +36,27 @@
 
       <div style="margin-left:25%"></div>
 
-      
       <!--Text-->
-          <div class="w3-container w3-round w3-row w3-col s12 m12 l6">
-      <h2 style="text-align:center;">A Guide on the Basics</h2>
-      <p>
-        This website serves as a simple guide for the very basics of the Adobe
-        Creative Cloud Service, you can find useful information on the most
-        popular apps such as Photoshop, Premiere Pro, After Effects,
-        Illustrator, Lightroom and more!
-      </p>
-    </div>
+      <div class="w3-container w3-round w3-row w3-col s12 m12 l6">
+        <h2 style="text-align:center;">A Guide on the Basics</h2>
+        <p>
+          This website serves as a simple guide for the very basics of the Adobe
+          Creative Cloud Service, you can find useful information on the most
+          popular apps such as Photoshop, Premiere Pro, After Effects,
+          Illustrator, Lightroom and more!
+        </p>
+      </div>
 
       <!--Images-->
       <img
         src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2FScreen%20Shot%202020-06-19%20at%209.20.33%20AM.png?v=1592515440086"
-        alt="Adobe CC"
+        alt="Adobe CC Apps"
         class="w3-image"
         width="900"
         height="700"
       />
     </div>
 
-    <br>
-
+    <br />
   </body>
 </html>
