--- a/apps.html
+++ b/apps.html
@@ -25,5 +25,114 @@
         >Applications</a
       >
     </div>
+
+   <h4>
+     Note: more screenshots to be added underneath each description of the application.
+    </h4> 
+    
+    <div>
+      <img
+        src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2Fps-ss.png?v=1596407161270"
+        alt="PS"
+        class="w3-image"
+        width="900"
+        height="700"
+      />
+
+      <p>
+        SAMPLE TEXT: Lorem Ipsum is simply dummy text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, when an unknown printer took a galley of type
+        and scrambled it to make a type specimen book. It has survived not only
+        five centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+      </p>
+      <br />
+      <img
+        src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2Fpr-ss.png?v=1596407202200"
+        alt="PR"
+        class="w3-image"
+        width="900"
+        height="700"
+      />
+
+      <p>
+        SAMPLE TEXT: Lorem Ipsum is simply dummy text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, when an unknown printer took a galley of type
+        and scrambled it to make a type specimen book. It has survived not only
+        five centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+      </p>
+
+      <br />
+      <img
+        src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2Fai-ss.png?v=1596407218330"
+        alt="AI"
+        class="w3-image"
+        width="900"
+        height="700"
+      />
+
+      <p>
+        SAMPLE TEXT: Lorem Ipsum is simply dummy text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, when an unknown printer took a galley of type
+        and scrambled it to make a type specimen book. It has survived not only
+        five centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+      </p>
+
+      <br />
+      <img
+        src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2Flr-ss.png?v=1596407231591"
+        alt="LR"
+        class="w3-image"
+        width="900"
+        height="700"
+      />
+
+      <p>
+        SAMPLE TEXT: Lorem Ipsum is simply dummy text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, when an unknown printer took a galley of type
+        and scrambled it to make a type specimen book. It has survived not only
+        five centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+      </p>
+
+      <br />
+      <img
+        src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2Fae-ss.png?v=1596407172451"
+        alt="AE"
+        class="w3-image"
+        width="900"
+        height="700"
+      />
+
+      <p>
+        SAMPLE TEXT: Lorem Ipsum is simply dummy text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry's standard dummy
+        text ever since the 1500s, when an unknown printer took a galley of type
+        and scrambled it to make a type specimen book. It has survived not only
+        five centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+      </p>
+    </div>
   </body>
 </html>
