--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div
         class="w3-container w3-black w3-padding-32 w3-row w3-col s12 m12 l12"
       >
-        <h1 style="text-align:center;">Beginners Guide to Adobe CC</h1>
+        <h1>Beginners Guide to Adobe CC</h1>
       </div>
 
       <!--Nav Bar-->
@@ -43,7 +43,7 @@
 
       <!--Text-->
       <div class="w3-container w3-round w3-row w3-col s12 m12 l6">
-        <h2 style="text-align:center;">A Guide on the Basics</h2>
+        <h2>A Guide on the Basics</h2>
         <p>
           This website serves as a simple guide for the very basics of the Adobe
           Creative Cloud Service, you can find useful information on the most
@@ -58,8 +58,6 @@
         src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2FScreen%20Shot%202020-06-19%20at%209.20.33%20AM.png?v=1592515440086"
         alt="Adobe CC Apps"
         class="w3-image"
-        width="900"
-        height="700"
       />
     </div>
     
