--- a/overview.html
+++ b/overview.html
@@ -13,8 +13,10 @@
   <body>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <div class="w3-container w3-black w3-padding-32 w3-row w3-col s12 m12 l12">
-      <h1 style="text-align:center;">Overview</h1>
+      <h1>Overview</h1>
     </div>
+  
+     <!--Nav Bar-->
 
     <div class="w3-bar w3-black">
       <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
@@ -25,9 +27,11 @@
         >Applications</a
       >
     </div>
+    
+     <!--Main Content-->
 
     <div class="w3-container w3-round w3-row w3-col s12 m12 l6">
-      <h2 style="text-align:center;">What is Adobe Creative Cloud?</h2>
+      <h2>What is Adobe Creative Cloud?</h2>
 
       <img
         src="https://cdn.glitch.com/144dc398-498e-4a9a-acb9-57b59752ddf2%2F%5Boptimized%5Dps_load_irl__1597105361_87626.jpg?v=1597105434433"
@@ -43,7 +47,7 @@
         a set of mobile applications and also some optional cloud services.
       </p>
 
-      <h2 style="text-align:center;">What apps will be primarily covered?</h2>
+      <h2>What apps will be primarily covered?</h2>
 
       <p>
         This website will be primarily be focusing on the following Adobe apps
