--- a/overview.html
+++ b/overview.html
@@ -15,20 +15,47 @@
     <div class="w3-container w3-black w3-padding-32 w3-row w3-col s12 m12 l12">
       <h1>Overview</h1>
     </div>
-  
-     <!--Nav Bar-->
+
+    <!--Nav Bar-->
+
+    <div style="margin-left:25%"></div>
 
     <div class="w3-bar w3-black">
-      <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-      <a href="overview.html" class="w3-bar-item w3-button w3-mobile"
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="overview.html" class="w3-bar-item w3-button w3-hide-small"
         >Overview</a
       >
-      <a href="apps.html" class="w3-bar-item w3-button w3-mobile"
+      <a href="apps.html" class="w3-bar-item w3-button w3-hide-small"
         >Applications</a
       >
+      <a
+        href="javascript:void(0)"
+        class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"
+        onclick="myFunction()"
+        >&#9776;</a
+      >
     </div>
-    
-     <!--Main Content-->
+
+    <div
+      id="demo"
+      class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium"
+    >
+      <a href="overview.html" class="w3-bar-item w3-button">Overview</a>
+      <a href="apps.html" class="w3-bar-item w3-button">Applications</a>
+    </div>
+
+    <script>
+      function myFunction() {
+        var x = document.getElementById("demo");
+        if (x.className.indexOf("w3-show") == -1) {
+          x.className += " w3-show";
+        } else {
+          x.className = x.className.replace(" w3-show", "");
+        }
+      }
+    </script>
+
+    <!--Main Content-->
 
     <div class="w3-container w3-round w3-row w3-col s12 m12 l6">
       <h2>What is Adobe Creative Cloud?</h2>
@@ -39,7 +66,7 @@
         alt="Adobe CC"
       />
 
-      <br/>
+      <br />
       <p>
         Adobe Creative Cloud is a set of applications and services from Adobe
         Inc. that gives subscribers access to a collection of software used for
