--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="w3-container w3-round w3-row w3-col s12 m12 l12">
         <h2>A Guide on the Basics</h2>
         <p>
-          This website serves as a simple guide for the very basics of the Adobe
+          This website serves as a simple guide for the very basics of a couple of the apps on the Adobe
           Creative Cloud Service, you can find useful information on the most
           popular apps such as Photoshop, Premiere Pro, After Effects,
           Illustrator & Lightroom.
