--- a/overview.html
+++ b/overview.html
@@ -81,6 +81,10 @@
         and their basic principles:
         <li>Photoshop</li>
         <li>Premiere Pro</li>
+        <br>
+     Theses apps will be explained but at this time there is no basic guide on them:  
+        <br>
+        <br>
         <li>Illustrator</li>
         <li>Lightroom</li>
         <li>After Effects</li>
