--- a/overview.html
+++ b/overview.html
@@ -86,7 +86,7 @@
         - Photoshop<br>
         - Premiere Pro<br>
         <br>
-     Theses apps will be explained but at this time there is no basic guide on them:  
+     Theses apps will be explained but at this time there is not a basic guide on them:
         <br>
         - Illustrator<br>
         - Lightroom<br>
