--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>12DTEC Website</title>
+    <title>12DTEC Website - Adobe CC </title>
 
     <!--Stylesheets & Setup stuff-->
 
@@ -146,8 +146,13 @@
 
       <div class="w3-container">
         <div class="w3-panel w3-leftbar w3-light-grey">
-          <p class="w3-xlarge w3-serif"><i>""</i></p>
-          <p>Tom English</p>
+          <p class="w3-xlarge w3-serif">
+            <i
+              >"Photoshop is the ideal tool for creative minds looking to waste
+              their time making memes."</i
+            >
+          </p>
+          <p>- End User Ruby</p>
         </div>
       </div>
 
