--- a/photoshop.html
+++ b/photoshop.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <!--Main Content-->
+    <!--Main Content here-->
 
     <div class="w3-container w3-round w3-row w3-col s12 m12 l12">
       <h2>
